--- a/root/webapp/main.css
+++ b/root/webapp/main.css
@@ -11,9 +11,6 @@ body, input, textarea, select {
 .c {
   text-align:center;
 }
-.checker {
-  margin-right:0.5em;
-}
 .column {
   float:left;
   width:50%;
@@ -48,20 +45,6 @@ button:disabled {
   color:forestgreen;
   cursor:default;
 }
-.buttonCopy {
-  border:1px solid white;
-  border-radius: 8px;
-  padding-left:6px;
-  padding-right:6px;
-  padding-top:1px;
-  padding-bottom:1px;
-  color:lightgreen;
-  cursor:pointer;
-  user-select: none;
-}
-.buttonCopy:hover {
-  color:darkgoldenrod;
-}
 a {
   border:1px solid white;
   border-radius: 8px;
@@ -87,7 +70,7 @@ a:active,a.nav:active {
 }
 td, th {
   padding:4px;
-  border:solid 1px white;
+  border:solid 1px gray;
 }
 tr:nth-child(odd) {
   background-color:#222222;
@@ -102,58 +85,8 @@ table {
   border-collapse:collapse;
   margin:0 auto;
 }
-thead {
-  border:solid 3px white;
-}
-tbody {
-  border:solid 3px darkgoldenrod;
-}
-tfoot {
-  border:solid 3px darkmagenta;
-}
-.tagYes {
-  border-style:hidden;
-  border-radius: 8px;
-  display:inline-block;
-  padding-left:6px;
-  padding-right:6px;
-  font-style:italic;
-  margin:2px;
-  background-color:green;
-}
-.tagNo {
-  border-style:hidden;
-  border-radius: 8px;
-  display:inline-block;
-  padding-left:6px;
-  padding-right:6px;
-  font-style:italic;
-  margin:2px;
-  background-color:darkred;
-}
-.tag {
-  border-style:hidden;
-  border-radius: 8px;
-  display:inline-block;
-  padding-left:6px;
-  padding-right:6px;
-  font-style:italic;
-  margin:2px;
-  user-select: none;
-}
-.popupSection {
-  border:2px solid hotpink;
-  border-radius: 2em;
-}
-.tagBox {
-  border:2px solid dodgerblue;
-  display:inline-block;
-  padding-left:6px;
-  padding-right:6px;
-  margin:2px;
-  margin-left:0.5em;
-  background-color:midnightblue;
-  font-style:normal;
+thead,tbody,tfoot {
+  border:solid 3px gray;
 }
 .divGrouping {
   display:inline-block;
@@ -162,20 +95,12 @@ tfoot {
   margin-top:5px;
   margin-bottom:5px;
 }
-.triangle {
-  width:0;
-  height:0;
-  margin-right:-0.5em;
-  border-width:0.5em;
-  border-style:solid;
-  border-color:transparent transparent transparent gold;
-}
-.bar {
-  position:absolute;
+.stickyBar {
+  position:sticky;
   top:0;
-  left:0;
   width:100%;
-  height:1em;
-  border:1px solid white;
-  background-color:darkgray;
+  background-color:black;
+  padding-top:0.75em;
+  border-bottom:1px solid gray;
+  border-top:1px solid gray;
 }
